--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -117,6 +117,12 @@ en-meep:
         submit: Meep
         header: (Not in a meepit)
         empty: There aren't any meepits here.
+      autocomplete:
+        add_item_html: Meep <strong>%{item_name}</strong>
+        add_to_list_html: Meep to <strong>%{list_name}</strong>
+        add_to_group_html: Meep to <strong>%{group_name}</strong>, no list
+        already_in_collection_html:
+          It's already meeped in <strong>%{collection_name}</strong>
     
     petpage:
       title: Export to meeppage
