--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -118,6 +118,12 @@ en:
         submit: Save
         header: (Not in a list)
         empty: There aren't any items here.
+      autocomplete:
+        add_item_html: Add <strong>%{item_name}</strong>
+        add_to_list_html: Add to <strong>%{list_name}</strong>
+        add_to_group_html: Add to <strong>%{group_name}</strong>, no list
+        already_in_collection_html:
+          It's already in <strong>%{collection_name}</strong>
     
     petpage:
       title: Export to petpage
