--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -442,6 +442,124 @@ en:
     destroy:
       success: Outfit "%{outfit_name}" successfully deleted.
     
+    edit:
+      pet_type:
+        not_found:
+          We haven't seen that combination before. Have you?
+          Submit the pet's name if you have!
+        form:
+          submit: Go
+      pet_state_form:
+        header: "Gender/Emotions:"
+      outfit:
+        permalink:
+          name: Permalink
+          description: Permalink to current outfit
+        save: Save outfit
+        sign_in_to_save: Log in to save
+        save_copy: Save as…
+        save_current_outfit:
+          main_html: Save "%{outfit_name}"
+          default_outfit_name: current outfit
+        form:
+          name_placeholder: Outfit name
+          submit: Save
+          cancel: Cancel
+      preview:
+        requirements:
+          Flash and Javascript (but not Java!) are required to preview outfits.
+        mode:
+          flash:
+            name: Flash
+          image:
+            name: Image
+            faq: Image mode FAQ
+            report_broken: Broken image?
+      sidebar:
+        nav:
+          closet: Closet
+          sharing: Sharing
+          outfits: Outfits
+        notifications:
+          outfits:
+            not_found: Outfit not found
+            save:
+              success: Outfit successfully saved
+        closet:
+          no_data:
+            description:
+              We haven't seen this item on this body type before. Have you?
+              Model it for us on the home page if you have!
+        outfits:
+          not_signed_in:
+            header: Ready to become a pro designer?
+            pitch_markdown: |
+              We know how hard it can be to keep track of your ideas,
+              especially if you end up having a lot of them.
+              **But Dress to Impress makes it easy.**
+            
+              Once you have an idea for an outfit, you can **build it, save it,
+              and view it again later**, either to update your design or
+              finally make your dream a reality.
+            
+              **Thousands of users have already saved tens of thousands of
+              outfits. Will you be next?**
+            sign_in: Log in to save this outfit
+          outfit:
+            rename: rename
+            delete: delete
+            delete_confirmation:
+              header: Delete?
+              delete: "yes"
+              cancel: "no"
+        sharing:
+          thumbnail:
+            saving: Saving…
+            generating: Generating…
+          links:
+            permalink: Outfit page
+            images:
+              large: Large
+              medium: Medium
+              small: Small
+          formats:
+            plain: Plain
+            html: HTML
+            bbcode: BBCode
+      search:
+        header: Add an item
+        form:
+          query_placeholder: Search items…
+          submit: Search
+          clear: clear
+        loading: Loading…
+        no_results_html: No results for "%{query}"
+        examples:
+          basic:
+            query: kreludor "altador cup" -background
+            description:
+              returns any item with the word "kreludor" and the phrase "altador
+              cup" in it, but not the word "background"
+          flags:
+            query: collar -is:nc -is:pb
+            description:
+              returns any item with the word "collar" in it, but is not from
+              the NC mall, and is not from a deluxe paint brush set
+          species:
+            filter:
+              key: species
+              default_value: Acara
+            query_html: "%{filter_key}:%{filter_value}"
+            description_html:
+              returns any item a %{default_value} can wear
+          type:
+            filter:
+              key: type
+              default_value: background
+            query_html: "%{filter_key}:%{filter_value}"
+            description_html:
+              returns any item that occupies a %{default_value} zone
+    
     index:
       title: Your Outfits
       intro:
