--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -135,10 +135,12 @@ en:
         Neopet's petpage. By default it's styled as a table, but it doesn't
         have to be. The HTML is flexible, so, if you're the artsy type, you're
         free to mess with the styles all you want!
-      instructions_html:
-        Copy the HTML from the box below, then paste it into
-        %{edit_petpage_link}. Then head to the Neoboards to show off! Have fun!
-      instructions_edit_petpage_link_content: your pet's page
+      instructions:
+        main_html:
+          Copy the HTML from the box below, then paste it into
+          %{edit_petpage_link}. Then head to the Neoboards to show off! Have
+          fun!
+        edit_petpage_link_content: your pet's page
     
     petpage_content:
       unlisted_header: (Not in a list)
