refactor items.show for hierarchy and twl

--- a/config/locales/en-meep.yml
+++ b/config/locales/en-meep.yml
@@ -283,17 +283,20 @@ en-meep:
     
     show:
       rarity: Meepity
-      jn_items: JN Meepits
-      shop_wizard: Meep Wizard
-      super_shop_wizard: Meeper Wizard
-      trading_post: Treeps
-      auction_genie: Aucteeps
-      hangers_header_html: Meep this in %{user_items_link}
-      quantity_label: How meepy?
-      submit_hangers: Save to Your Meeps
-      occupied_zones_header: Occupeeps
-      restricted_zones_header: Restreeps
-      no_restricted_zones: Meepless
+      resources:
+        jn_items: JN Meepits
+        shop_wizard: Meep Wizard
+        super_shop_wizard: Meeper Wizard
+        trading_post: Treeps
+        auction_genie: Aucteeps
+      closet_hangers:
+        header_html: Meep this in %{user_items_link}
+        quantity_label: How meepy?
+        submit: Save to Your Meeps
+      zones:
+        occupied_header: Occupeeps
+        restricted_header: Restreeps
+        none: Meepless
       trading_closet_hangers:
         header:
           owned:
@@ -306,17 +309,20 @@ en-meep:
             other: "%{count} users meep this item:"
         show_more: meep more
         show_less: meep less
-      preview_header: Meepview
-      customize_more: Customize meep
-      preview_requirements_not_met:
-        Javascript and Flash are required to preview meepits. Meep!
-      contributors_header: Meeped to you by
-      contributors_footer: Meep!
-      swf_assets_not_found_html:
-        We've never meeped the %{item_name} on the %{color_name}
-        %{species_name} before. Have you? If so, please %{modeling_link} and
-        we'll meep our datameep instantly. Meep!
-      swf_assets_not_found_modeling_link_content: meep it for us
+      preview:
+        header: Meepview
+        customize_more: Customize meep
+        requirements_not_met:
+          Javascript and Flash are required to preview meepits. Meep!
+        not_found:
+          main_html:
+            We've never meeped the %{item_name} on the %{color_name}
+            %{species_name} before. Have you? If so, please %{modeling_link} and
+            we'll meep our datameep instantly. Meep!
+          modeling_link_content: meep it for us
+      contributors:
+        header: Meeped to you by
+        footer: Meep!
   
   neopets_pages:
     create:
